--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
 	<audio>
 		<source src="sounds/coin.mp3" preload="auto">
 	</audio>
+	<audio loop>
+		<source src="sounds/background.wav" preload="auto">
+	</audio>
 </head>
 
 <body>
@@ -34,6 +37,9 @@
 				</p>
 			</div>
 		</div>	
+	</section>
+	
+	<section>
 		<p class="info">
 			2016 by michalgmazurek
 		</p>
@@ -43,7 +49,6 @@
 		<div id="score">
 			<h2>SCORE: <span>0</span></h2>
 		</div>
-	
 		<article id="board">
 			<div></div>
 			<div></div>
@@ -145,15 +150,13 @@
 			<div></div>
 			<div></div>
 			<div></div>	
-
 		</article>
 	</section>
 	
 	<div class="gameOver hidden">
-		<h1>GAME<br>OVER</h1>
+		<h1>game<br>over</h1>
 	</div>
 	
 <script src="app.js" type="text/javascript"></script>	
 </body>
-
 </html>
