--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 					<br><span class="arrows"> &#8678 &#8679 &#8681 &#8680</span> </p>
 				<p> Collect as many coins as you can
 					<br> and have FUN! </p>
-				<p> Click <span>mariano</span> or press <span>space</span><br> to start the game! </p>
+				<p> Press <span>space</span><br> to start the game! </p>
 			</div>
 		</div>
 	</section>
